--- a/arch/arm/configs/0googymax4_CM_defconfig
+++ b/arch/arm/configs/0googymax4_CM_defconfig
@@ -30,6 +30,16 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CHARGE_LEVEL=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_FIOPS=y
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_FIFO is not set
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
