--- a/arch/arm/configs/0googymax4_CM_defconfig
+++ b/arch/arm/configs/0googymax4_CM_defconfig
@@ -25,6 +25,10 @@ CONFIG_DEFAULT_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_KERNEL_MODE_NEON=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
