--- a/arch/arm/configs/0googymax4_CM_defconfig
+++ b/arch/arm/configs/0googymax4_CM_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-GoogyMax4_CM-v1.5-b7_60"
+CONFIG_LOCALVERSION="-GoogyMax4_CM-v1.5"
 # CONFIG_LOCALVERSION_AUTO is not set
 #
 # Googy-Max4
@@ -40,6 +40,8 @@ CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_FIFO is not set
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_BOEFFLA_SOUND=y
+#
 CONFIG_EXPERIMENTAL=y
 CONFIG_KERNEL_LZO=y
 CONFIG_SYSVIPC=y
