--- a/arch/arm/configs/0googymax4_CM_defconfig
+++ b/arch/arm/configs/0googymax4_CM_defconfig
@@ -29,6 +29,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CHARGE_LEVEL=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
