--- a/arch/arm/configs/0googymax4_CM_defconfig
+++ b/arch/arm/configs/0googymax4_CM_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-GoogyMax4_CM-v1.0"
+CONFIG_LOCALVERSION="-GoogyMax4_CM-v1.5-b3"
 # CONFIG_LOCALVERSION_AUTO is not set
 #
 # Googy-Max4
